name:                bootstrap-types
version:             0.4
synopsis:            Bootstrap CSS Framework type-safe interface
license:             MIT
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Bootstrap.V3
  build-depends:
      base >=4.11.1 && <5.0
    , text >= 1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
