name:                yesod-bootstrap
version:             0.5
synopsis:            Bootstrap widgets for yesod
description:         Lots of bootstrap widgets for yesod
license:             MIT
license-file:        LICENSE
homepage:            https://github.com/andrewthad/haskell-bootstrap
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           Andrew Martin 2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Yesod.Bootstrap.V3
  build-depends:
      base >=4.11.1 && <5.0
    , yesod-core >= 1.6
    , yesod-elements >= 1.1
    , bootstrap-types >= 0.4
    , transformers >= 0.5
    , shakespeare
    , text >= 1.2
    , blaze-html
    , blaze-markup
  hs-source-dirs:      src
  default-language:    Haskell2010
